force-app/main/default/objects/clofor_com_cfs__HRStandard__c/clofor_com_cfs__HRStandard__c.object-meta.xml
<CustomObject>
    <description>To setup basic information to manage Human Resources.</description>
    <label>人事管理標準</label>
    <nameField>
        <displayFormat>HR-{000000}</displayFormat>
        <label>HR STANDARD ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>