force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__Active__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>After approval, checkbox will be checked.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>