force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__BaseNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BaseNumber__c</fullName>
    <defaultValue>20</defaultValue>
    <label>BASE NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>