force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__basicsalary__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__basicsalary__c</fullName>
    <label>Basic salary</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>