force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__BudgetForGasolinePerMonth__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BudgetForGasolinePerMonth__c</fullName>
    <label>BUDGET FOR GASOLINE PER MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>