force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__BudgetForRElocationCostPerMonth__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BudgetForRElocationCostPerMonth__c</fullName>
    <label>BUDGET FOR RELOCATION COST PER MONTH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>