force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__CloHRMSetupName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CloHRMSetupName__c</fullName>
    <defaultValue>&quot;CloHRM Standard-&quot;</defaultValue>
    <label>HR POLICY NAME</label>
    <length>70</length>
    <type>Text</type>
</CustomField>