force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__HealthInsuranceRatioByEmployee__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HealthInsuranceRatioByEmployee__c</fullName>
    <defaultValue>0.015</defaultValue>
    <label>HEALTH INSURANCE RATIO BY EMPLOYEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>