force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__HSUInsuranceRatioByEmployee_r__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HSUInsuranceRatioByEmployee_r__c</fullName>
    <formula>clofor_com_cfs__HSUInsuranceRatioByEmployee__c  +  clofor_com_cfs__HSUInsuranceRatioByEmployer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>H/S/UNEM INSURANCE RATIO BY EMPLOYEE/R</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>