force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__MaleRetirementAge__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaleRetirementAge__c</fullName>
    <defaultValue>60</defaultValue>
    <label>MALE RETIREMENT AGE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>