force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__MasterHRPolicyID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MasterHRPolicyID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MASTER HR POLICY ID</label>
    <referenceTo>clofor_com_cfs__HRStandard__c</referenceTo>
    <relationshipLabel>SUPPLEMENT HR POLICY</relationshipLabel>
    <relationshipName>MasterHRPolicy</relationshipName>
    <type>Lookup</type>
</CustomField>