force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__overtimerange3__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__overtimerange3__c</fullName>
    <inlineHelpText>Is the salary coefficient that the employee will receive if there is overtime at this range</inlineHelpText>
    <label>Overtime range 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>