force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__OvertimeWorkingAllowancePercentage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OvertimeWorkingAllowancePercentage__c</fullName>
    <label>OVERTIME WORKING ALLOWANCE PERCENTAGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>