force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__PaidPersonalLeaveChildMarriage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaidPersonalLeaveChildMarriage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>PAID PERSONAL LEAVE-CHILD MARRIAGE(DAYS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>