force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__PaidPersonalLeaveSpouseDeath__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaidPersonalLeaveSpouseDeath__c</fullName>
    <defaultValue>3</defaultValue>
    <label>PAID PERSONAL LEAVE-SPOUSE DEATH(DAYS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>