force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__SalaryBaseUnitAmount__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SalaryBaseUnitAmount__c</fullName>
    <defaultValue>1310000</defaultValue>
    <label>MINIMUM SALARY BASE UNIT AMOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>