force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__salarytocontributesocialinsurance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__salarytocontributesocialinsurance__c</fullName>
    <label>Salary to Contribute Social Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>