force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__SocialInsuranceRatioByEmployer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SocialInsuranceRatioByEmployer__c</fullName>
    <defaultValue>0.175</defaultValue>
    <label>SOCIAL INSURANCE RATIO BY EMPLOYER</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>