force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__StandardDependentDeductionPerPerson__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StandardDependentDeductionPerPerson__c</fullName>
    <defaultValue>3600000</defaultValue>
    <label>STANDARD DEPENDENT DEDUCTION PER PERSON</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>