force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__TAXAdjustRange3__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TAXAdjustRange3__c</fullName>
    <defaultValue>750000</defaultValue>
    <inlineHelpText>Tax adjust greater 10m VND &amp; less or equal 18m VND</inlineHelpText>
    <label>TAX ADJUST RANGE 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>