force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__TAXAdjustRange5__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TAXAdjustRange5__c</fullName>
    <defaultValue>3250000</defaultValue>
    <inlineHelpText>Tax adjust greater 32m VND &amp; less or equal 52m VND</inlineHelpText>
    <label>TAX ADJUST RANGE 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>