force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__TaxRatioRange1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TaxRatioRange1__c</fullName>
    <defaultValue>0.05</defaultValue>
    <inlineHelpText>Tax ratio-less or equal 5m VND</inlineHelpText>
    <label>TAX RATIO RANGE 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>