force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__TAXRatioRange2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TAXRatioRange2__c</fullName>
    <defaultValue>0.1</defaultValue>
    <inlineHelpText>Tax ratio-greater 5m VND &amp; less or equal10m VND</inlineHelpText>
    <label>TAX RATIO RANGE 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>