force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__TAXRatioRange3__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TAXRatioRange3__c</fullName>
    <defaultValue>0.15</defaultValue>
    <inlineHelpText>Tax ratio-greater 10m VND &amp; less or equal 18m VND</inlineHelpText>
    <label>TAX RATIO RANGE 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>