force-app/main/default/objects/clofor_com_cfs__HRStandard__c/fields/clofor_com_cfs__unionfundratiobyemployer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__unionfundratiobyemployer__c</fullName>
    <label>Union fund ratio by Employer</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>