force-app/main/default/objects/clofor_com_cfs__HRStandard__c/recordTypes/clofor_com_cfs__MasterHRPolicy.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__MasterHRPolicy</fullName>
    <active>true</active>
    <label>Master HR Policy</label>
</RecordType>