force-app/main/default/objects/clofor_com_cfs__HRStandard__c/recordTypes/clofor_com_cfs__SuppHRPolicy.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__SuppHRPolicy</fullName>
    <active>true</active>
    <label>Supplement HR Policy</label>
</RecordType>